# tauri-rustdocs-candle

./: README.md  build.ps1  build.sh  package.json  pnpm-lock.yaml
scripts/: remove_rust.sh  setup.sh
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  embedder.rs  lib.rs  mcp_server.rs  rustdoc_processor.rs
src/app/: layout.tsx
src/app/projects/: page.tsx
src/app/query/: page.tsx
